# Marketing_Campaign_Predictor

./: .coverage  .gitignore  README.md  data.py  pyproject.toml
configs/: requirements.txt
data/: data.py
docs/: Faza1_Preprocesare_Date.md  Marketing_Campaign_Predictor_Requirements.md  Marketing_Campaign_Project_Structure.md  documentation.md
src/: EDA.py  EDA_enhanced.py
src/marketing_campaign_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: logger.py
tests/: test_EDA.py
