[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-campaign-predictor"
version = "0.1.0"
description = "Marketing Campaign Analysis and Prediction Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Panuta"}
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["configs/requirements.txt"]}  # Adjust path if necessary

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"